--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,22 +5,42 @@
     padding-bottom: 100px;
     display: grid;
     gap: 9px;
+    @media (max-width: $mobile) {
+      justify-items: center;
+      padding-top: 50px;
+      padding-bottom: 50px;
+    }
   }
   &__wrap,
   &__bottom {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
   }
-
-  &__logo {
+  &__wrap {
+    @media (max-width: $mobile) {
+      flex-direction: column;
+    }
   }
+
+  // &__logo {
+  // }
 
   &__menu {
+    &.menu {
+      @media (max-width: $mobile) {
+        position: relative;
+        left: 0;
+        top: 0;
+        background-color: transparent;
+        padding: 20px 0;
+      }
+    }
   }
 
-  &__contact {
-  }
+  // &__contact {
+  // }
   &__inner {
     display: grid;
     gap: 30px;
@@ -38,34 +58,44 @@
     border-bottom: 1px solid transparent;
     &:hover {
       color: $colorAccent;
-      // padding-bottom: 5px;
       border-bottom: 1px solid $colorAccentBacg;
     }
   }
   &__text {
-    font-size: 13px;
+    font-size: 10px;
     letter-spacing: 0.26px;
+    @media (min-width: $mobile) {
+      font-size: 13px;
+    }
   }
   &__list {
-    display: grid;
-    gap: 5px;
+    display: none;
+    @media (min-width: $mobile) {
+      display: grid;
+      gap: 5px;
+    }
   }
-  &__item {
-  }
-  &__link {
-  }
-  &__text {
-  }
+  // &__item {
+  // }
 }
 //==========================================================================================================================================
 .contact-footer {
   display: flex;
-  flex-direction: column;
-  gap: 9px;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-end;
+  @media (max-width: $mobile) {
+    width: 100%;
+  }
+  @media (min-width: $mobile) {
+    gap: 9px;
+    flex-direction: column;
+    justify-content: center;
+  }
   &__text {
-    font-size: 15px;
+    font-size: 12px;
     letter-spacing: 0.3px;
+    @media (min-width: $mobile) {
+      font-size: 15px;
+    }
   }
 }
