--- a/src/components/Main/Importance/Importance.scss
+++ b/src/components/Main/Importance/Importance.scss
@@ -1,11 +1,15 @@
 .importance {
   &__container {
-    padding-bottom: 130px;
+    padding-bottom: calc(130px / 2);
     display: flex;
     flex-flow: column nowrap;
-    gap: 92px;
+    gap: calc(92px / 2);
     justify-content: center;
     align-items: center;
+    @media (min-width: $tablet) {
+      padding-bottom: 130px;
+      gap: 92px;
+    }
   }
 
   &__title {
@@ -18,16 +22,35 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 75px;
+    @media (max-width: $mobile) {
+      flex-direction: column;
+      gap: calc(75px / 2);
+    }
   }
 
   &__item {
+    width: 100%;
     display: grid;
-    gap: 24px;
+    grid-template-columns: 50px 1fr;
+    gap: calc(24px / 2);
+    padding: 10px 0;
+    @media (min-width: $mobile) {
+      gap: 24px;
+      padding: 0;
+      grid-template-columns: 1fr;
+    }
   }
 
   &__svg {
-    width: 61px;
-    height: 61px;
+    & svg {
+      width: 30px;
+      height: 30px;
+      @media (min-width: $tablet) {
+        width: 61px;
+        height: 61px;
+      }
+    }
   }
 
   &__subtitle {
@@ -43,5 +66,9 @@
     max-width: 305px;
     font-weight: 500;
     letter-spacing: 0.34px;
+    @media (max-width: $mobile) {
+      grid-column: 1/3;
+      font-size: 14px;
+    }
   }
 }
