--- a/src/components/Main/Promo/Promo.scss
+++ b/src/components/Main/Promo/Promo.scss
@@ -8,7 +8,6 @@
 }
 .swiper-pagination {
   position: absolute;
-  bottom: 40px;
   text-align: center;
   transition: 300ms opacity;
   transform: translate3d(0, 0, 0);
@@ -50,7 +49,7 @@
 //==========================================================================================================================================
 .promo {
   position: relative;
-
+  top: 96px;
   @media (min-width: $tablet) {
     top: 96px;
   }
@@ -58,13 +57,19 @@
     content: "";
     width: 100%;
     height: 100%;
-    max-width: 705px;
+    max-width: 45%;
     max-height: 826px;
     background-color: $colorPearl;
     position: absolute;
     top: -96px;
     right: 0;
     z-index: -1;
+    @media (max-width: $pcSmall) {
+      max-width: 48%;
+    }
+    @media (max-width: $tablet) {
+      max-width: 42%;
+    }
     @media (max-width: $mobile) {
       position: absolute;
       width: 100%;
