--- a/src/components/Shop/ShopProducts/ShopProducts.scss
+++ b/src/components/Shop/ShopProducts/ShopProducts.scss
@@ -6,10 +6,10 @@
     padding-bottom: 65px;
     color: #808080;
   }
-  &__inner {
-    display: flex;
-    align-items: start;
-  }
+  // &__inner {
+  //   display: flex;
+  //   align-items: start;
+  // }
 }
 //==========================================================================================================================================
 
