--- a/src/components/Main/HomeShop/HomeShop.scss
+++ b/src/components/Main/HomeShop/HomeShop.scss
@@ -51,6 +51,9 @@
     @media (min-width: $mobile) {
       grid-column: 1/3;
     }
+    @media (min-width: $pcSmall) {
+      grid-column: 3/3;
+    }
   }
   @media (min-width: $tablet) {
     max-width: 350px;
