--- a/src/components/Main/HomeShop/HomeShop.scss
+++ b/src/components/Main/HomeShop/HomeShop.scss
@@ -47,14 +47,7 @@
   gap: 24px;
   // width: 350px;
   width: 100%;
-  &:last-child {
-    @media (min-width: $mobile) {
-      grid-column: 1/3;
-    }
-    @media (min-width: $pcSmall) {
-      grid-column: 3/3;
-    }
-  }
+
   @media (min-width: $tablet) {
     max-width: 350px;
     min-height: 558px;
@@ -100,12 +93,14 @@
   &__img {
     max-width: calc(320px - 30px);
     height: auto;
+
     @media (min-width: $mobile) {
       max-width: 280px;
     }
     @media (min-width: $tablet) {
       max-width: none;
       max-height: 487px;
+      height: 478px;
     }
   }
   &__link {
