--- a/src/components/Main/HomeShop/HomeShop.scss
+++ b/src/components/Main/HomeShop/HomeShop.scss
@@ -47,7 +47,7 @@
   gap: 24px;
   // width: 350px;
   width: 100%;
-
+  min-height: 481px;
   @media (min-width: $tablet) {
     max-width: 350px;
     min-height: 558px;
