--- a/src/components/Sort/Sort.scss
+++ b/src/components/Sort/Sort.scss
@@ -15,13 +15,19 @@
   }
 
   &__item {
-    flex: 1 0 auto;
+    flex: 1 0 content;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
-    // padding: 19px 65px;
     border: 1px solid #000;
+    &:first-child {
+      flex: 0 0 content;
+
+      @media (min-width: $tablet) {
+        padding: 19px 40px;
+      }
+    }
     @media (min-width: $tablet) {
       padding: 19px 0;
     }
