--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -175,6 +175,15 @@ $mobileSmall: 479.98px; //em(479.98)
   letter-spacing: 1.1px;
 }
 .title-big {
+  font-size: 35px;
+  font-weight: 500;
+  line-height: 110%; /* 60.5px */
+  letter-spacing: 1.1px;
+  @media (min-width: $tablet) {
+    font-size: 55px;
+  }
+}
+.title {
   font-size: 20px;
   font-weight: 500;
   line-height: 110%; /* 60.5px */
@@ -214,9 +223,13 @@ $mobileSmall: 479.98px; //em(479.98)
   letter-spacing: 0.4px;
 }
 .text {
+  font-size: 15px;
   font-weight: 500;
   line-height: 140%;
   letter-spacing: 0.34px;
+  @media (min-width: $tablet) {
+    font-size: 17px;
+  }
 }
 .text-big {
   font-size: 20px;
