--- a/src/components/PopupForm/PopupForm.scss
+++ b/src/components/PopupForm/PopupForm.scss
@@ -3,21 +3,28 @@
   flex-flow: column nowrap;
   justify-content: center;
   align-items: stretch;
-  gap: 35px;
+  gap: calc(35px / 2);
+  @media (min-width: $mobile) {
+    gap: 35px;
+  }
   .order__container & {
     align-items: flex-start;
   }
 
   &__input {
-    width: 350px;
+    width: 100%;
+    max-width: 350px;
     height: 40px;
     border-bottom: 1px solid $colorBlack;
     transition: border-color 0.5s ease 0s, color 0.5s ease 0s;
     &::placeholder {
       color: #868686;
-      font-size: 17px;
+      font-size: 13px;
       font-weight: 500;
       letter-spacing: 0.34px;
+      @media (min-width: $mobile) {
+        font-size: 17px;
+      }
     }
     &:focus,
     &:hover {
@@ -33,16 +40,23 @@
     }
   }
   &__texarea {
-    width: 350px;
-    height: 134px;
+    width: 100%;
+    max-width: 350px;
+    height: 100px;
     border-bottom: 1px solid $colorBlack;
     transition: border-color 0.5s ease 0s, color 0.5s ease 0s;
     resize: none;
+    @media (min-width: $mobile) {
+      height: 134px;
+    }
     &::placeholder {
       color: #868686;
-      font-size: 17px;
+      font-size: 13px;
       font-weight: 500;
       letter-spacing: 0.34px;
+      @media (min-width: $mobile) {
+        font-size: 17px;
+      }
     }
     &:focus,
     &:hover {
@@ -66,6 +80,9 @@
   color: red;
   &__color {
     color: #18be18;
+  }
+  @media (max-width: $mobile) {
+    font-size: 12px;
   }
 }
 //==========================================================================================================================================
