--- a/src/components/UI/Modal/Modal.scss
+++ b/src/components/UI/Modal/Modal.scss
@@ -69,9 +69,12 @@ body {
   }
   &__title {
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 500;
     letter-spacing: 0.5px;
+    @media (min-width: $mobile) {
+      font-size: 25px;
+    }
   }
   &__close {
     position: absolute;
