--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -174,6 +174,15 @@ $mobileSmall: 479.98px; //em(479.98)
   line-height: 110%; /* 60.5px */
   letter-spacing: 1.1px;
 }
+// .title-big {
+//   font-size: 35px;
+//   font-weight: 500;
+//   line-height: 110%; /* 60.5px */
+//   letter-spacing: 1.1px;
+//   @media (min-width: $tablet) {
+//     font-size: 55px;
+//   }
+// }
 .title-big {
   font-size: 35px;
   font-weight: 500;
@@ -183,7 +192,7 @@ $mobileSmall: 479.98px; //em(479.98)
     font-size: 55px;
   }
 }
-.title {
+.promo__title {
   font-size: 20px;
   font-weight: 500;
   line-height: 110%; /* 60.5px */
@@ -232,9 +241,15 @@ $mobileSmall: 479.98px; //em(479.98)
   }
 }
 .text-big {
-  font-size: 20px;
+  font-size: 12px;
   line-height: 140%; /* 28px */
   letter-spacing: 0.4px;
+  @media (min-width: $mobile) {
+    font-size: 18px;
+  }
+  @media (min-width: $tablet) {
+    font-size: 20px;
+  }
 }
 //==========================================================================================================================================
 .breadcrumbs {
