--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -89,6 +89,7 @@ $mobileSmall: 479.98px; //em(479.98)
   @media (min-width: $mobile) {
     padding: 22px 50px;
   }
+
   &:hover {
     background-color: $colorGreen;
   }
@@ -173,6 +174,11 @@ $mobileSmall: 479.98px; //em(479.98)
   font-weight: 500;
   line-height: 110%; /* 60.5px */
   letter-spacing: 1.1px;
+  @media (max-width: $mobile) {
+    padding-top: 90px;
+    padding-bottom: 40px;
+    font-size: 35px;
+  }
 }
 
 .title-big {
@@ -212,10 +218,13 @@ $mobileSmall: 479.98px; //em(479.98)
   }
 }
 .subtitle-h3 {
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 500;
   line-height: 140%; /* 28px */
   letter-spacing: 0.5px;
+  @media (min-width: $mobile) {
+    font-size: 25px;
+  }
 }
 .subtitle-h4 {
   font-size: 16px;
