--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -92,6 +92,7 @@ $mobileSmall: 479.98px; //em(479.98)
 
   &:hover {
     background-color: $colorGreen;
+    color: $colorWrite;
   }
   &__text {
     color: $colorWrite;
@@ -242,6 +243,15 @@ $mobileSmall: 479.98px; //em(479.98)
   letter-spacing: 0.34px;
   @media (min-width: $tablet) {
     font-size: 17px;
+  }
+}
+.text-small {
+  font-size: 11px;
+  font-weight: 400;
+  // line-height: 140%;
+  // letter-spacing: 0.34px;
+  @media (min-width: $tablet) {
+    font-size: 14px;
   }
 }
 .text-big {
